[gd_scene load_steps=5 format=2]

[ext_resource path="res://Componentes/Boton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Pantallas/Menus/MenuPausa.gd" type="Script" id=2]
[ext_resource path="res://Recursos/Estilos/Interfaz.tres" type="Theme" id=3]

[sub_resource type="ButtonGroup" id=8]

[node name="MenuPausa" type="Panel"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -48.0
margin_right = 48.0
theme = ExtResource( 3 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -42.0
margin_right = 42.0
alignment = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Continuar" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_top = 124.0
margin_right = 84.0
margin_bottom = 149.0
text = "Continuar"

[node name="Guardar" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_top = 153.0
margin_right = 84.0
margin_bottom = 178.0
text = "Guardar"

[node name="Cargar" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_top = 182.0
margin_right = 84.0
margin_bottom = 207.0
text = "Opciones"

[node name="Salir" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_top = 211.0
margin_right = 84.0
margin_bottom = 236.0
group = SubResource( 8 )
text = "Salir"

[connection signal="botonPresionado" from="VBoxContainer/Continuar" to="." method="_on_Continuar_botonPresionado"]
[connection signal="botonPresionado" from="VBoxContainer/Guardar" to="." method="_on_Guardar_botonPresionado"]
[connection signal="botonPresionado" from="VBoxContainer/Cargar" to="." method="_on_Cargar_botonPresionado"]
[connection signal="botonPresionado" from="VBoxContainer/Salir" to="." method="_on_Salir_botonPresionado"]
